<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/back_signup_me">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"

        android:layout_marginRight="48dp"
        android:layout_marginLeft="48dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:fontFamily="@font/poppins_semibold_file"
            android:textColor="@color/white"
            android:textSize="42sp"
            android:layout_weight="1"/>

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            style="@style/EditorFieldStyle"
            android:id="@+id/name"
            android:inputType="textPersonName"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            style="@style/EditorFieldStyle"
            android:id="@+id/email_register"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            style="@style/EditorFieldStyle"
            android:id="@+id/password_register"
            android:inputType="textPassword"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/re_password_hint"
            style="@style/EditorFieldStyle"
            android:id="@+id/re_password_register"
            android:inputType="textPassword"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_sign_screen"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/poppins_semibold_file"
                />
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="2"/>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                android:background="@drawable/ripple"
                android:scaleType="center"
                android:clickable="true"
                android:id="@+id/sign_up_btn"
                />
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_gravity="center"
                style="@style/ProgressBarStyle"

                />

        </FrameLayout>

        </LinearLayout>






        <TextView
            android:layout_width="wrap_content"
            android:paddingBottom="16dp"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/poppins_semibold_file"
            android:layout_weight="1"
            android:id="@+id/log_in"
            />




    </LinearLayout>

</LinearLayout>
