<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up2"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
   >

    <RelativeLayout
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
<LinearLayout
    android:id="@+id/top_create"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <RelativeLayout
            android:layout_gravity="center_vertical"
            android:layout_width="70dp"
            android:layout_height="6dp"
            android:background="@drawable/signup_green"/>

    <RelativeLayout
        android:layout_marginLeft="8dp"
        android:layout_gravity="center_vertical"
        android:layout_width="10dp"
        android:layout_height="6dp"
        android:background="@drawable/signup_green"/>


</LinearLayout>
    <TextView
        android:layout_below="@id/top_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:fontFamily="@font/poppins_semibold_file"
        android:textColor="@color/white"
        android:textSize="42sp"
        />

    </RelativeLayout>

<LinearLayout
    android:layout_marginTop="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/create"
    android:orientation="vertical"
    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/signup_person"/>

        <EditText
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            style="@style/EditorFieldStyleSignUp"
            android:id="@+id/name"
            android:inputType="textPersonName"
            android:layout_marginStart="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/email_png"/>

        <EditText
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            style="@style/EditorFieldStyle"
            android:id="@+id/email_register"
            android:inputType="textEmailAddress"
            android:layout_marginStart="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/key_logo_circle"/>

        <EditText
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            style="@style/EditorFieldStyle"
            android:id="@+id/password_register"
            android:inputType="textPassword"
            android:layout_marginStart="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/security_circle"/>

        <EditText
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/re_password_hint"
            style="@style/EditorFieldStyle"
            android:id="@+id/re_password_register"
            android:inputType="textPassword"
            />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_sign_screen"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/poppins_semibold_file"
                />
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="2"/>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right"
                    android:background="@drawable/ripple_white"
                    android:scaleType="center"
                    android:clickable="true"
                    android:id="@+id/sign_up_btn"
                    />
                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_gravity="center"
                    style="@style/ProgressBarStyle"

                    />

            </FrameLayout>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/poppins_semibold_file"
            android:layout_weight="1"
            android:id="@+id/log_in"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>



        <RelativeLayout
            android:layout_gravity="center_vertical"
            android:layout_width="60dp"
            android:layout_height="1dp"
            android:background="@drawable/signup_green"/>

        <TextView
            android:layout_marginHorizontal="24dp"
            android:layout_below="@id/top_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Or"
            android:fontFamily="@font/poppins_semibold_file"
            android:textColor="@color/white"
            android:textSize="24sp"
            />

        <RelativeLayout
            android:layout_gravity="center_vertical"
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:background="@drawable/signup_green"/>

        <RelativeLayout
            android:layout_gravity="center_vertical"
            android:layout_width="20dp"
            android:layout_marginLeft="10dp"
            android:layout_height="1dp"
            android:background="@drawable/signup_green"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout

        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <LinearLayout
            android:id="@+id/google_sign_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:background="@drawable/back_shadow">

            <TextView
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular_file"
                android:text="Google"
                 />

            <ImageView
                android:layout_marginLeft="16dp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_google"/>

        </LinearLayout>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>
        <LinearLayout
            android:id="@+id/facebook_sign_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:background="@drawable/back_shadow">

            <TextView
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular_file"
                android:text="Facebook"/>

            <ImageView
                android:layout_marginLeft="16dp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_facebook"/>

        </LinearLayout>


        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>


</LinearLayout>


</RelativeLayout>
</androidx.core.widget.NestedScrollView>